--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
-#DATABASE_URL = postgres://sounisaa@localhost:5432/Grocery_List
-DATABASE_URL= postgresql://postgres:AgFDJwfJ2tSs2Zah1XxU@containers-us-west-123.railway.app:5691/railway
+DATABASE_URL = postgres://sounisaa@localhost:5432/Grocery_List
+#DATABASE_URL= postgresql://postgres:AgFDJwfJ2tSs2Zah1XxU@containers-us-west-123.railway.app:5691/railway
